# bands-inspect

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  LICENSE.txt  README.md  clean.sh  pyproject.toml  setup.py
.ci/: install_script.sh
.github/workflows/: ci.yml
.github/workflows_source/: ci.yml
bands_inspect/: __init__.py  _cli.py  _serializable.py  _version.py  eigenvals.py  lattice.py  plot.py
bands_inspect/compare/: __init__.py  _difference.py  align.py  difference.py
bands_inspect/io/: __init__.py  _hdf5_utils.py  _save_load.py  _serialize_mapping.py
bands_inspect/io/_legacy/: _hdf5_utils.py
bands_inspect/kpoints/: __init__.py  _base.py  _explicit.py  _mesh.py  _path.py
bandstructure_utils/: __init__.py  _cli.py  _eigenvals.py  _hdf5_utils.py  _serializable.py  eigenvals.py  lattice.py  plot.py
bandstructure_utils/compare/: __init__.py  _difference.py
bandstructure_utils/io/: __init__.py  _save_load.py
bandstructure_utils/kpoints/: __init__.py  _base.py  _explicit.py  _mesh.py  _path.py  base.py  explicit.py  mesh.py
doc/: Makefile  requirements_for_rtd.txt
doc/source/: .gitignore  conf.py  index.rst  reference.rst
doc/source/samples/: InSb.hdf5
src/bands_inspect/: __init__.py  _cli.py  eigenvals.py  lattice.py  plot.py
src/bands_inspect/compare/: __init__.py  align.py  difference.py
tests/: conftest.py  coverage.sh  instances.py  kpoints_instances.py  parameters.py  test_io_freefunc.py  test_save_load.py
tests/align/: test_align.py
tests/cli/: test_difference.py  test_slice_bands.py  utils.py
tests/compare/: test_diff.py
tests/io/: test_freefunc.py  test_legacy.py  test_memberfunc.py
tests/kpoints/: test_explicit_match.py
tests/samples/: legacy_path_eigenvals.hdf5  silicon_bands.hdf5
utils/: interpolate_yaml_anchors.py
(+8 files in other folders)
